resolving html error

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
     <main>
-        <section class="about displayOff">
+        <section class="about displayOn">
             <div class="header-about">
                 <div class="about-me">
                     <img src="./assets/prof.jpg" />
@@ -124,7 +124,7 @@
                 <img src="./assets/undraw_conversation_re_c26v.svg"alt="">
             </div>
         </section>
-        <section class="projects displayOn">
+        <section class="projects displayOff">
             <h2>Projetos</h2>
             <div class="projects-list">
                 <div class="project">
